<resources>
    <string name="app_name">游学</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">游学</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_user">个人中心</string>
    <string name="navigation_setting">消息设置</string>
    <string name="title_activity_settings">消息设置</string>

    <!-- 登录注册字符串 -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password2">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="reg">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名有问题</string>
    <string name="error_invalid_password">请输入密码</string>
    <string name="error_field_required">请输入用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_reg">还没有账号，注册</string>
    <string name="login_name_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.</string>

    <!-- 侧滑栏用字符串 -->
    <string name="login_tip">请登录</string>

    <string name="title_activity_login">登录</string>
    <string name="title_activity_tab">TabActivity</string>

    <!-- HomeFragment -->
    <string name="home_list_loading">加载中&#8230;</string>

    <!-- 个人信息页面 -->
    <string name="title_activity_user_info">个人信息</string>
    <string name="title_activity_note_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_book_info">订单</string>
    <string name="book_status">游学详情</string>
    <string name="book_tour_info">出行信息</string>
    <string name="book_info">订单信息</string>
    <string name="tour_place">游学地点:</string>
    <string name="go_place">出发地点:</string>
    <string name="go_date">出发时间:</string>
    <string name="tour_day">出行天数:</string>
    <string name="tour_deposit">订金:</string>
    <string name="tour_money">总金额:</string>
    <string name="tour_manager">负责人:</string>
    <string name="book_id">订单编号:</string>
    <string name="book_date">下单日期:</string>
    <string name="book_user">订单联系人:</string>
    <string name="book_tel">联系方式</string>
    <string name="day">天</string>
    <string name="yuan">元</string>
    <string name="book_sure">确认下单</string>
    <string name="pay_all">支付全款</string>
    <string name="go_book">去预定</string>
    <string name="query_question">查看问题</string>
    <string name="pay_now">立即付款</string>
    <string name="pay_time">支付时间:</string>
    <string name="pay_not">未支付</string>
    <string name="text_login">注册</string>
    <string name="send">发送</string>

</resources>
