<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kl.tourstudy.activity.BookInfoActivity"
    tools:showIn="@layout/activity_book_info">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_image"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                tools:src="@drawable/aus_1"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <RelativeLayout
                android:id="@+id/rl_status"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_status"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:text="@string/book_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <!--<ImageView-->
                    <!--android:scaleX="0.5"-->
                    <!--android:scaleY="0.5"-->
                    <!--android:src="@drawable/arrow_right"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_toRightOf="@+id/tv_status"-->
                    <!--android:layout_toEndOf="@+id/tv_status" />-->

            </RelativeLayout>

            <ImageView
                android:background="#f5f5f5"
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <LinearLayout
                android:id="@+id/ll_title"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:id="@+id/tv_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="澳洲动物奇遇记:东海岸亲子教育主题课程游学"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:background="#f5f5f5"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:textSize="14sp"
                android:text="@string/book_tour_info"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_margin="10dp"
                tools:text="游学地点：亚特兰蒂斯"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_margin="10dp"
                tools:text="出发地点：北京市八达岭长城老虎洞"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_go"
                android:layout_margin="10dp"
                tools:text="出发时间：2017-5-10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_margin="10dp"
                tools:text="出行天数：14天"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_deposit"
                android:layout_margin="10dp"
                tools:text="订金:3000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_margin="10dp"
                tools:text="总价格:39800"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_manage"
                android:layout_margin="10dp"
                tools:text="负责人：张先生 15979102468"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:padding="16dp"
                android:background="@drawable/button_shape"
                android:id="@+id/btn_call"
                android:layout_gravity="center"
                android:text="联系负责人"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:background="#f5f5f5"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/book_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_book_id"
                android:layout_margin="10dp"
                android:text="订单编号"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_book_time"
                android:layout_margin="10dp"
                android:text="下单时间"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_headman"
                android:layout_margin="10dp"
                tools:text="下单人:一只羊"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_margin="10dp"
                tools:text="联系方式:15979102164"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:background="#f5f5f5"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:layout_margin="@dimen/text_margin"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/pay_now"
                android:background="@drawable/button_shape"
                android:id="@+id/btn_pay"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.SwipeRefreshLayout>